Fixed and centered sign up button on mobile screen

--- a/components/home-page/home-buttons/sign-up-button.module.css
+++ b/components/home-page/home-buttons/sign-up-button.module.css
@@ -22,6 +22,24 @@
   margin-top: 20px;
 }
 
+@media (max-width: 420px) {
+  .button--sign-up {
+    gap: 12px;
+    color: black;
+    width: auto;
+    font-size: 0.8em;
+    background-color: Transparent;
+    border: none;
+    text-decoration: underline;
+    text-decoration-color: rgb(255, 230, 117);
+    text-decoration-thickness: 1px;
+    text-shadow: #fc0 1px 3px 3px;
+    font-weight: bolder;
+    border-radius: 5px;
+    margin: 20px 0 0 0;
+  }
+}
+
 .container:hover,
 .button--sign-up {
   transform: translateX(8px);
